# discord-call-recorder

./: .gitignore  LICENSE  README.md  choose_audio_device.py  compile.cmd  config.env  installer.py  main.py  pyproject.toml  requirements.txt
Injector/: inject.cmd
Injector/jsfiles/: record_trigger.plugin.js
modules/: install_virtual_audio_capturer.cmd
utilities/: CustomLogger.py  record_trigger.plugin.js  recording.py  script.js
